<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#AADAFF"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="5dp"
    android:paddingRight="20dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/companyName_TV"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="10dp"
        android:text="@string/company_name"
        android:textColor="#00f"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:background="#cef"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contactPerson_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contact"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/phone_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cef"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/location_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/numOfEmployees_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/size"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date1_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date1"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/date2_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date2"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/date3_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date3"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date4_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date4"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/date5_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date5"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#cef"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button">

            <ImageView
                android:id="@+id/weatherIV1"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/weather_image_icon"
                android:scaleType="centerInside"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <ImageView
                android:id="@+id/weatherIV2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/weather_image_icon"
                android:visibility="visible"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <ImageView
                android:id="@+id/weatherIV3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/weather_image_icon"
                android:visibility="visible"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <ImageView
                android:id="@+id/weatherIV4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/weather_image_icon"
                android:visibility="visible"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <ImageView
                android:id="@+id/weatherIV5"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:contentDescription="@string/weather_image_icon"
                android:visibility="visible"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>