<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AADAFF"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="5dp"
    android:paddingRight="20dp"
    android:paddingBottom="5dp"
    tools:context=".View.InputInfoActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="344dp"
        android:layout_height="573dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#DDDDF0"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/customer_information"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/customerET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name" />

        <EditText
            android:id="@+id/contactET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_person" />

        <EditText
            android:id="@+id/phoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/locationET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/city_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/numEmployeeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/number_of_employees"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/yesModifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:onClick="onClickYes"
            android:text="YES"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/cancelModifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:onClick="onClickCancel"
            android:text="@string/cancel"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/addModifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:onClick="onClickModify"
            android:text="MODIFY"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/deleteModifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:onClick="onClickDelete"
            android:text="DELETE"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/deleteYesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:onClick="Yes"
            android:text="YES"
            android:textColor="@color/cardview_light_background" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>